Update style.css fix carousel caption mobile

--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ svg {
     display: none;
   }
   
-  .carousel-indicators {
+  .carousel-caption {
     display: none;
   }
 }
